# romi-teleop

./: .gitignore  LICENSE  README.md  requirements.txt
configs/: bi_ur3_real.yaml  bi_ur5e_real.yaml  bi_ur5e_sim.yaml  ur3_real.yaml  ur5e_real.yaml
lerobot_camera_mujoco/: __init__.py  pyproject.toml
lerobot_camera_mujoco/lerobot_camera_mujoco/: __init__.py  configuration_mujoco.py  mujoco_camera.py
lerobot_robot_bi_ur3/: README.md  __init__.py  pyproject.toml
lerobot_robot_bi_ur3/lerobot_robot_bi_ur3/: __init__.py  bi_ur3.py  config_bi_ur3.py
lerobot_robot_bi_ur5e/: README.md  __init__.py  pyproject.toml
lerobot_robot_bi_ur5e/lerobot_robot_bi_ur5e/: __init__.py  bi_ur5e.py  config_bi_ur5e.py
lerobot_robot_sim_bi_ur5e/: README.md  __init__.py  pyproject.toml
lerobot_robot_sim_bi_ur5e/assest/: Dustpan.stl  Office_Broom.stl
lerobot_robot_sim_bi_ur5e/lerobot_robot_sim_bi_ur5e/: __init__.py  bi_ur5e_mujoco_backend.py  build_bi_ur5e_mujoco_env.py  config_sim_bi_ur5e.py  sim_bi_ur5e.py
lerobot_robot_sim_ur3e/: README.md  __init__.py  pyproject.toml
lerobot_robot_sim_ur3e/lerobot_robot_sim_ur3e/: __init__.py  config_sim_ur3e.py  sim_ur3e.py  ur3e_mujoco_server.py
lerobot_robot_sim_ur3e/lerobot_robot_sim_ur3e/safety/: __init__.py  collision_checker.py  ur3_self_collision.py  ur3_self_collision_config.py
lerobot_robot_ur3/: README.md  __init__.py  pyproject.toml
lerobot_robot_ur3/lerobot_robot_ur3/: __init__.py  config_ur3.py  robotiq_gripper.py  ur3.py
lerobot_robot_ur5e/: README.md  __init__.py  pyproject.toml
lerobot_robot_ur5e/lerobot_robot_ur5e/: __init__.py  config_ur5e.py  onrobot_gripper.py  ur5e.py
lerobot_teleoperator_bi_gello/: README.md  __init__.py  pyproject.toml
lerobot_teleoperator_bi_gello/lerobot_teleoperator_bi_gello/: __init__.py  bi_gello.py  config_bi_gello.py
lerobot_teleoperator_gello/: pyproject.toml
lerobot_teleoperator_gello/lerobot_teleoperator_gello/: config_gello.py
scripts/: install_deps.sh  record_bi_ur3.py  record_ur3.py  reset.py  reset_ur5e.py  teleoperate_bi_ur3_bi_gello.py  teleoperate_bi_ur5e_gello.py  teleoperate_gello_sim_ur3e.py  teleoperate_ur3_gello.py  teleoperate_ur5e_gello.py
