[project]
name = "lerobot_robot_bi_ur3"
version = "0.1.0"
description = "A lerobot plugin for controlling two UR3 robots as a bimanual robot."
requires-python = ">=3.12"

dependencies = [
    "lerobot",
    "lerobot_robot_ur3",
]

[tool.setuptools]
packages = ["lerobot_robot_bi_ur3"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
