[project]
name = "lerobot_robot_sim_bi_ur5e"
version = "0.1.0"
description = "A lerobot plugin for a bimanual simulated UR5e MuJoCo environment."
requires-python = ">=3.12"
dependencies = [
    "lerobot",
    "lerobot-camera-mujoco",
    "mujoco",
    "dm-control",
]

[tool.setuptools]
packages = ["lerobot_robot_sim_bi_ur5e"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
