[project]
name = "lerobot_robot_ur3"
version = "0.1.0"
description = "A lerobot plugin for the UR3 robot with a Robotiq 2F-85 gripper."
requires-python = ">=3.12"

dependencies = [
    "lerobot",
    "ur-rtde>=1.6.2",
]

[tool.setuptools]
packages = ["lerobot_robot_ur3"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
