[project]
name = "lerobot_robot_ur5e"
version = "0.1.0"
description = "A lerobot plugin for the UR5e robot with an OnRobot gripper."
requires-python = ">=3.12"

dependencies = [
    "lerobot",
    "onRobot",
    "ur-rtde>=1.6.2",
]

[tool.setuptools]
packages = ["lerobot_robot_ur5e"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
